--- a/catalog.html
+++ b/catalog.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+
 <html lang="ru">
   <head>
     <meta charset="utf-8">
@@ -121,7 +122,7 @@
         <img src="img/icecream-blueberries.jpg" alt="фото мороженки">
         <p class="card-price">410 ₽/кг</p>
         <a class="card-name">Сливочно-черничное с цельным ягодами черники</a>
-        <div><a class="button-preview" href="#">Быстрый просмотр</a></div>a
+        <div><a class="button-preview" href="#">Быстрый просмотр</a></div>
       </div>
       <div class="icecream-card">
         <img src="img/icecream-lemon.jpg" alt="фото мороженки">
