--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
   <div class="blog-newsletter">
     <section class="blog">
       <h3>Новое в нашем блоге</h3>
-      <a href="blog.html">10 способов сервировки<br> фруктовых шербетов к<br> столу <!--как сделать перенос строк как по макету?-->
+      <a href="blog.html">10 способов сервировкифруктовых шербетов к столу 
       </a>
     </section>
     <section class="newsletter">
-      <p class="newsletter-p">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
       <form class="mail-form" method="get" action="http://search.html">
+        <p class="newsletter-p">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
         <label for="user-mail">Электронная почта</label>
         <input type="text" id="user-mail" placeholder="Электронная почта">
         <input type="submit" value="Отправить">
