--- a/index.html
+++ b/index.html
@@ -76,6 +76,49 @@
 </div>
 <main class="container">
   <h1 class="visually-hidden">Главная страница</h1>
+
+ <section class="slaider">
+    <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+    <input class="visually-hidden" type="radio" id="product-2" name="toggle">
+    <input class="visually-hidden" type="radio" id="product-3" name="toggle">
+    <div class="site-wrapper">
+      <div class="container">
+        <header class="main-header"></header>
+        <section class="slider">
+          <div class="slider-controls">
+            <label for="product-1">Первый</label>
+            <label for="product-2">Второй</label>
+            <label for="product-3">Третий</label>
+          </div>
+          <ul class="slider-list">
+            <li class="slider-item slide" id="slide1">
+              <h3 class="slide-title">
+                Крем-брюле и пломбир с малиновым джемом
+              </h3>
+              <a class="button slide-button" href="#">Давайте оба!</a>
+            </li>
+            <li class="slider-item slide" id="slide2">
+              <h3 class="slide-title">
+                Шоколадный пломбир и лимонный сорбет
+              </h3>
+              <a class="button slide-button" href="#">Давайте оба!</a>
+            </li>
+            <li class="slider-item slide" id="slide3">
+              <h3 class="slide-title">
+                Пломбир с помадкой и клубничный щербет
+              </h3>
+              <a class="button slide-button" href="#">Давайте оба!</a>
+            </li>
+          </ul>
+        </section>
+      </div>
+    </div>
+  </section>
+
+
+advantages
+
+
   <section class="advantages">
     <h2 class="visually-hidden">Преимущества</h2>
     <p class="specification-shop">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
@@ -90,7 +133,7 @@
   <div class="blog-newsletter">
     <section class="blog">
       <h3>Новое в нашем блоге</h3>
-      <a href="blog.html">10 способов сервировкифруктовых шербетов к столу
+      <a href="blog.html">10 способов сервировки фруктовых шербетов к столу
       </a>
     </section>
     <section class="newsletter">
