--- a/catalog.html
+++ b/catalog.html
@@ -15,61 +15,17 @@
             <img src="img/logo.svg" alt="Логотип Глейси" width="150" height="150">
           </a>
           <ul class="site-navigation">
-            <li><a href="catalog-dropdown">Каталог</a>
+            <li class="catalog-main"><a class="catalog-main-categories--active" href="сatalog.html">Каталог</a>
             <ul class="catalog-dropdown-items">
-              <li><a href="сatalog.html/brand_new">Новинки</a></li>
-              <li><a href="сatalog.html/sliv">Сливочное</a></li>
-              <li><a href="сatalog.html/sher">Шербеты</a></li>
-              <li><a href="сatalog.html/fru">Фруктовый лед</a></li>
-              <li><a href="сatalog.html/mel">Мелорин</a></li>
+              <li class="catalog-categories"><a href="сatalog.html/brand_new">Новинки</a></li>
+              <li class="catalog-categories"><a href="сatalog.html/sliv">Сливочное</a></li>
+              <li class="catalog-categories"><a href="сatalog.html/sher">Шербеты</a></li>
+              <li class="catalog-categories"><a href="сatalog.html/fru">Фруктовый лед</a></li>
+              <li class="catalog-categories"><a href="сatalog.html/mel">Мелорин</a></li>
             </ul>
           </li>
-          <li><a href="delivery">Доставка и оплата</a></li>
-          <li><a href="about-us">О компании</a></li>
-        </ul>
-        <ul class="user-navigation">
-          <li>
-            <a class="button-search" href="search.html"></a>
-            <form class="search-form" method="get" action="https://eses.ru">
-              <p>
-                <label for="search-input" hidden="">Что ищем?</label>
-                <input type="text" id="search-input" placeholder="Что ищем?">
-              </p>
-            </form>
-          </li>
-          <li>
-            <a class="login-link" href="login.html">Вход</a>
-            <form class="login-form" method="get" action="https://eses.ru">
-              <p>
-                <label for="login-user" hidden="">Электронная почта</label>
-                <input type="text" id="login-user" name="login" placeholder="Электронная почта">
-              </p>
-              <p>
-                <label for="user-password" hidden="">Пароль</label>
-                <input id="user-password" type="password" name="password" placeholder="Пароль">
-              </p>
-              <button type="submit">Войти</button>
-              <a class="login-form-link" href="#">Забыли пароль?</a>
-              <a class="login-form-link" href="#">Новая регистрация</a>
-            </form>
-          </li>
-          <li><a class="cart-button" href="cart.html">Пусто</a>
-          <div class="basket-form">
-            <table>
-              <tr>
-                <td>Пломбир с апельсиновым джемом</td>
-                <td>1.5 кг</td>
-                <td>300 р.</td>
-              </tr>
-              <tr>
-                <td>Клубничный пломбир с присыпкой из белого шоколада</td>
-                <td>1.5 кг</td>
-                <td>450 р.</td>
-              </tr>
-            </table>
-            <a href="Checkout">Оформить заказ</a>
-          </div>
-        </li>
+        <li class="catalog-main"><a class="catalog-main-categories" href="delivery">Доставка и оплата</a></li>
+        <li class="catalog-main"><a class="catalog-main-categories" href="about-us">О компании</a></li>
       </ul>
     </nav>
   </header>
